--- a/app/src/main/res/layout/activity_fasting_tracker.xml
+++ b/app/src/main/res/layout/activity_fasting_tracker.xml
@@ -8,8 +8,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.avaygo.myfastingtracker.aFastingTracker"
+    tools:context="com.avaygo.myfastingtracker.FastingTrackerActivity"
     android:clickable="false"
-    android:background="#2C3E50">
+    style="?pageBackground">
 
 </RelativeLayout>
