--- a/app/src/main/res/layout/fragment_f_fasting_started.xml
+++ b/app/src/main/res/layout/fragment_f_fasting_started.xml
@@ -2,29 +2,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    tools:context="com.avaygo.myfastingtracker.fFastingStarted"
+    tools:context="com.avaygo.myfastingtracker.TimerStartedFragment"
     android:id="@+id/main2"
     android:paddingLeft="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_horizontal_margin"
     android:gravity="fill_horizontal|fill_vertical"
-    android:background="#2C3E50">
+    style="?pageBackground">
 
 
     <Button
         android:layout_width="85sp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:text="@string/btnStop"
         android:id="@+id/breakFast_button"
         style="@style/AppTheme"
         android:singleLine="false"
         android:layout_alignWithParentIfMissing="false"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:background="@drawable/redbutton"
+        android:textColor="@color/Clouds"
+        android:textSize="18sp"
+        android:typeface="normal" />
 
     <LinearLayout
         android:orientation="horizontal"
@@ -49,23 +53,21 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="End"
                 android:id="@+id/end"
                 android:textSize="14sp"
-                android:textColor="@color/snow_light"
                 android:textStyle="bold"
                 android:gravity="right"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:textAppearance="?textRegular" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textAppearance="?textRegular"
                 android:text="Thu - 22:00"
                 android:id="@+id/end_time"
                 android:paddingTop="1dp"
-                android:textColor="@color/snow_light"
                 android:textSize="14sp"
                 android:gravity="right"
                 android:layout_weight="1" />
@@ -85,13 +87,12 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textAppearance="?textTimer"
                 android:text="Start"
                 android:id="@+id/start"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:textSize="14sp"
-                android:textColor="@color/snow_light"
                 android:textStyle="bold"
                 android:gravity="left"
                 android:layout_weight="1" />
@@ -99,13 +100,12 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textAppearance="?textRegular"
                 android:text="22:00"
                 android:id="@+id/start_time"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
                 android:paddingTop="1dp"
-                android:textColor="@color/snow_light"
                 android:layout_gravity="left"
                 android:gravity="left"
                 android:layout_weight="1"
@@ -140,17 +140,16 @@
                 android:id="@+id/txt_time_HoursMins"
                 android:textSize="70sp"
                 android:gravity="center"
-                android:textColor="@color/snow_primary"
-                android:typeface="normal" />
+                android:typeface="normal"
+                android:textAppearance="?textTimer" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textAppearance="?textTimer"
                 android:text=":59"
                 android:id="@+id/txt_time_seconds"
                 android:layout_gravity="center_vertical"
-                android:textColor="@color/snow_light"
                 android:gravity="center" />
 
         </LinearLayout>
@@ -179,8 +178,8 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:textSize="14sp"
-                android:textColor="@color/snow_light"
-                android:typeface="normal" />
+                android:typeface="normal"
+                android:textAppearance="?textRegular" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -191,7 +190,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:paddingTop="1dp"
-                android:textColor="@color/snow_light" />
+                android:textAppearance="?textRegular" />
 
         </LinearLayout>
 
@@ -201,7 +200,6 @@
             android:text="24 Hours"
             android:id="@+id/txt_FastingDuration"
             android:paddingTop="1dp"
-            android:textColor="@color/snow_light"
             android:gravity="center_horizontal"
             android:layout_marginTop="64dp"
             android:textSize="14sp"
@@ -209,13 +207,14 @@
             android:layout_alignRight="@+id/clock_linear"
             android:layout_alignEnd="@+id/clock_linear"
             android:layout_alignLeft="@+id/clock_linear"
-            android:layout_alignStart="@+id/clock_linear" />
+            android:layout_alignStart="@+id/clock_linear"
+            android:textAppearance="?textRegular" />
 
         <de.passy.holocircularprogressbar.HoloCircularProgressBar
             android:id="@+id/holoCircularProgressBar1"
             android:layout_width="wrap_content"
             android:layout_height="280dp"
-            style="@style/CircularProgressBarLight"
+            style="?circleProgress"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
