--- a/app/src/main/res/layout/fragment_fasting_length.xml
+++ b/app/src/main/res/layout/fragment_fasting_length.xml
@@ -10,8 +10,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".main"
     android:id="@+id/main"
-    android:background="#2C3E50">
-
+    style="?pageBackground">
 
     <com.devadvance.circularseekbar.CircularSeekBar
         android:id="@+id/circularSeekBar1"
@@ -21,24 +20,16 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="false"
+        style="?circleSeek"
         app:max="23"
-
         app:pointer_radius="6"
-        app:pointer_halo_width="8"
-
-        app:pointer_alpha_ontouch="255"
-        app:pointer_color="#b3c0392b"
-        app:pointer_halo_color_ontouch="#b3e74c3c"
-        app:pointer_halo_color="#e74c3c"
-
-        app:circle_color="#bdc3c7"
-        app:circle_progress_color="#c0392b"
-            android:paddingRight="5dp" />
+        app:pointer_halo_width="4"
+        android:paddingRight="5dp" />
 
     <Button
 
         android:layout_width="85sp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:text="@string/start_toggle"
         android:id="@+id/start_toggle"
         android:layout_alignParentBottom="true"
@@ -46,7 +37,10 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignRight="@+id/relative"
-        android:layout_alignEnd="@+id/relative" />
+        android:layout_alignEnd="@+id/relative"
+        android:background="@drawable/greenbutton"
+        android:textColor="@color/Clouds"
+        android:textSize="18dp" />
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -74,7 +68,7 @@
                 android:layout_alignParentStart="false"
                 android:layout_centerInParent="true"
                 android:gravity="center"
-                android:textColor="@color/snow_primary"
+                style="?textTimer"
                 android:layout_alignParentRight="false"
                 android:layout_alignParentEnd="false" />
 
@@ -84,7 +78,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text=":00"
                 android:id="@+id/txt_seconds"
-                android:textColor="@color/snow_light"
+                style="?textTimer"
                 android:layout_gravity="center_vertical"
                 android:gravity="center_vertical" />
         </LinearLayout>
@@ -117,7 +111,7 @@
                 android:layout_toLeftOf="@+id/current_time"
                 android:layout_weight="1"
                 android:layout_gravity="right"
-                android:textColor="@color/snow_light" />
+                style= "?textRegular" />
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -135,7 +129,7 @@
                     android:textSize="14sp"
                     android:layout_above="@+id/seekVal"
                     android:layout_toRightOf="@+id/clock_linear"
-                    android:textColor="@color/snow_light" />
+                    style="?textRegular" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -145,7 +139,7 @@
                     android:id="@+id/endclock_text"
                     android:textSize="15sp"
                     android:layout_gravity="center_horizontal"
-                    android:textColor="@color/snow_light" />
+                    style="?textRegular" />
             </LinearLayout>
 
         </LinearLayout>
@@ -169,7 +163,7 @@
                 android:layout_alignRight="@+id/circularSeekBar1"
                 android:layout_alignEnd="@+id/circularSeekBar1"
                 android:layout_marginRight="42dp"
-                android:textColor="@color/snow_light" />
+                style="?textRegular" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -180,7 +174,7 @@
                 android:textSize="14sp"
                 android:layout_below="@+id/current_time"
                 android:layout_toRightOf="@+id/end_time"
-                android:textColor="@color/snow_light" />
+               style="?textRegular" />
         </LinearLayout>
 
     </LinearLayout>
