--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,15 +2,16 @@
 <resources>
 
     <declare-styleable name="HoloCircularProgressBar">
-    <attr name="stroke_width" format="dimension" />
-    <attr name="progress" format="float" />
-    <attr name="marker_progress" format="float" />
-    <attr name="progress_color" format="color" />
-    <attr name="progress_background_color" format="color" />
-    <attr name="thumb_visible" format="boolean" />
-    <attr name="marker_visible" format="boolean" />
-    <attr name="android:gravity" />
-</declare-styleable>
+        <attr name="stroke_width" format="dimension" />
+        <attr name="progress" format="float" />
+        <attr name="marker_progress" format="float" />
+        <attr name="progress_color" format="color" />
+        <attr name="progress_background_color" format="color" />
+        <attr name="thumb_visible" format="boolean" />
+        <attr name="marker_visible" format="boolean" />
+        <attr name="android:gravity" />
+    </declare-styleable>
+
     <attr name="circularProgressBarStyle" format="reference" />
 
     <declare-styleable name="CircularSeekBar">
@@ -37,6 +38,14 @@
         <attr name="circle_fill" format="string"></attr>
     </declare-styleable>
 
+    <!-- Timer view Styles -->
+    <attr name="pageBackground" format="reference" />
+    <attr name="textTitle" format="reference" />
+    <attr name="textTimer" format="reference" />
+    <attr name="textRegular" format="reference" />
+
+    <attr name="circleSeek" format="reference"/>
+    <attr name="circleProgress" format="reference" />
 
 
 </resources>
