--- a/app/src/main/res/layout/fragment_f_fasting_started.xml
+++ b/app/src/main/res/layout/fragment_f_fasting_started.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    tools:context="com.avaygo.myfastingtracker.TimerStartedFragment"
+    tools:context="com.avaygo.myfastingtracker.Fragments.TimerStartedFragment"
     android:id="@+id/main2"
     android:paddingLeft="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_horizontal_margin"
@@ -17,7 +17,7 @@
         android:layout_height="48dp"
         android:text="@string/btnStop"
         android:id="@+id/breakFast_button"
-        style="@style/AppTheme"
+        style="?textButton"
         android:singleLine="false"
         android:layout_alignWithParentIfMissing="false"
         android:layout_alignParentBottom="true"
