--- a/app/src/main/res/menu/fasting_log.xml
+++ b/app/src/main/res/menu/fasting_log.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.avaygo.myfastingtracker.Activities.FastingTrackerActivity" >
+    tools:context="com.avaygo.myfastingtracker.Activities.FastingLogActivity" >
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
