--- a/app/src/main/res/layout/activity_fasting_tracker.xml
+++ b/app/src/main/res/layout/activity_fasting_tracker.xml
@@ -1,15 +1,35 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
 
     android:id = "@+id/container"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context="com.avaygo.myfastingtracker.Activities.FastingTrackerActivity"
     android:clickable="false"
     style="?pageBackground">
 
-</RelativeLayout>
+    <!-- As the main content view, the view below consumes the entire
+       space available using match_parent in both dimensions. -->
+    <FrameLayout
+        android:id="@+id/mainContent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </FrameLayout>
+
+    <!-- android:layout_gravity="start" tells DrawerLayout to treat
+       this as a sliding drawer on the left side for left-to-right
+       languages and on the right side for right-to-left languages.
+       If you're not building against API 17 or higher, use
+       android:layout_gravity="left" instead. -->
+    <!-- The drawer is given a fixed width in dp and extends the full height of
+         the container. -->
+
+    <ListView
+        android:background="@color/Clouds"
+        android:divider="@null"
+        android:id="@+id/drawerList"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"></ListView>
+
+</android.support.v4.widget.DrawerLayout>
