--- a/app/src/main/res/layout/fragment_fasting_started.xml
+++ b/app/src/main/res/layout/fragment_fasting_started.xml
@@ -12,37 +12,10 @@
 
     style="?pageBackground">
 
-    <Button
-        android:layout_width="85sp"
-        android:layout_height="48dp"
-        android:text="@string/btnStop"
-        android:id="@+id/breakFast_button"
-        style="?textButton"
-        android:singleLine="false"
-        android:layout_alignWithParentIfMissing="false"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:background="@drawable/redbutton"
-        android:textColor="@color/Clouds"
-        android:textSize="18sp"
-        android:typeface="normal" />
-
-
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:paddingBottom="5dp"
-        android:id="@+id/clock_relative"
-        android:layout_above="@+id/breakFast_button"
-
-        android:divider="@android:color/transparent"
-        android:dividerHeight="@dimen/activity_horizontal_margin"
-
-        android:background="@drawable/card"
-        android:layout_marginBottom="8dp">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -50,20 +23,22 @@
             android:layout_height="wrap_content"
             android:weightSum="2"
             android:id="@+id/linearLayout2"
-            android:layout_above="@+id/holoCircularProgressBar1"
+            android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true">
+            android:layout_alignParentStart="true"
+            android:baselineAligned="false"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="-8dp">
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/linearLayout"
-                android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:layout_weight="1"
-                android:layout_marginRight="5dp"
+                android:layout_marginRight="4dp"
                 android:gravity="right">
 
 
@@ -79,10 +54,17 @@
                     android:textAppearance="?textTitle" />
 
                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?textTitle"
+                    android:text="Friday"
+                    android:id="@+id/txt_end_day" />
+
+                <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAppearance="?textRegular"
-                    android:text="Thu - 22:00"
+                    android:text="21:00"
                     android:id="@+id/end_time"
                     android:paddingTop="1dp"
                     android:textSize="14sp"
@@ -96,10 +78,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/linearLayout4"
-                android:layout_alignParentTop="true"
-                android:layout_toLeftOf="@+id/linearLayout"
                 android:layout_weight="1"
-                android:layout_marginLeft="5dp">
+                android:layout_marginLeft="4dp">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -113,6 +93,13 @@
                     android:textStyle="bold"
                     android:gravity="left"
                     android:layout_weight="1" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?textTitle"
+                    android:text="Thursday"
+                    android:id="@+id/txt_start_day" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -131,97 +118,138 @@
             </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
-            android:orientation="horizontal"
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/clock_linear"
-            android:layout_above="@+id/completed_linear"
-            android:layout_centerHorizontal="true">
+            android:paddingBottom="5dp"
+            android:id="@+id/clock_relative"
 
-            <TextView
+            android:divider="@android:color/transparent"
+            android:dividerHeight="@dimen/activity_horizontal_margin"
+
+            android:layout_marginBottom="12dp">
+
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="00:59"
-                android:id="@+id/txt_time_HoursMins"
-                android:textSize="70sp"
-                android:gravity="center"
-                android:typeface="normal"
-                android:textAppearance="?textTimer" />
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true">
 
-            <TextView
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="24 Hours"
+                    android:id="@+id/txt_FastingDuration"
+                    android:textSize="14sp"
+                    android:textAppearance="?textRegular"
+                    android:gravity="center"
+                    android:layout_marginTop="70dp"
+                    android:layout_alignTop="@+id/holoCircularProgressBar1"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginBottom="8dp" />
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/clock_linear"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="8dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="00:59"
+                        android:id="@+id/txt_time_HoursMins"
+                        android:textSize="70sp"
+                        android:gravity="center"
+                        android:typeface="normal"
+                        android:textAppearance="?textTimer" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:textAppearance="?textTimer"
+                        android:text=":59"
+                        android:id="@+id/txt_time_seconds"
+                        android:layout_gravity="center_vertical"
+                        android:gravity="center" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignWithParentIfMissing="false"
+
+                    android:id="@+id/completed_linear"
+                    android:layout_marginBottom="57dp"
+                    android:layout_alignBottom="@+id/holoCircularProgressBar1"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:gravity="center"
+                    android:baselineAligned="false">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Completed"
+                        android:id="@+id/TXT_COMPLETED"
+                        android:layout_above="@+id/txt_FastingDuration"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentEnd="true"
+                        android:textSize="14sp"
+                        android:typeface="normal"
+                        android:textAppearance="?textRegular" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="1%"
+                        android:id="@+id/txt_completed"
+                        android:layout_below="@+id/textView2"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentEnd="true"
+                        android:paddingTop="1dp"
+                        android:textAppearance="?textRegular" />
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <de.passy.holocircularprogressbar.HoloCircularProgressBar
+                android:id="@+id/holoCircularProgressBar1"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textAppearance="?textTimer"
-                android:text=":59"
-                android:id="@+id/txt_time_seconds"
-                android:layout_gravity="center_vertical"
-                android:gravity="center" />
+                android:layout_height="272dp"
+                style="?circleProgress"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
 
-        </LinearLayout>
+        </RelativeLayout>
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignWithParentIfMissing="false"
+    </LinearLayout>
 
-
-            android:gravity="center"
-            android:id="@+id/completed_linear"
-            android:layout_marginBottom="64dp"
-            android:layout_alignBottom="@+id/holoCircularProgressBar1"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Completed"
-                android:id="@+id/textView2"
-                android:layout_above="@+id/txt_FastingDuration"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:textSize="14sp"
-                android:typeface="normal"
-                android:textAppearance="?textRegular" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="1%"
-                android:id="@+id/txt_completed"
-                android:layout_below="@+id/textView2"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:paddingTop="1dp"
-                android:textAppearance="?textRegular" />
-
-        </LinearLayout>
-
-        <de.passy.holocircularprogressbar.HoloCircularProgressBar
-            android:id="@+id/holoCircularProgressBar1"
-            android:layout_width="wrap_content"
-            android:layout_height="280dp"
-            style="?circleProgress"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="24 Hours"
-            android:id="@+id/txt_FastingDuration"
-            android:paddingTop="1dp"
-            android:gravity="center_horizontal"
-            android:textSize="14sp"
-            android:textAppearance="?textRegular"
-            android:layout_above="@+id/clock_linear"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-    </RelativeLayout>
+    <Button
+        android:layout_width="85sp"
+        android:layout_height="48dp"
+        android:text="@string/btnStop"
+        android:id="@+id/breakFast_button"
+        style="?textButton"
+        android:singleLine="false"
+        android:layout_alignWithParentIfMissing="false"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/redbutton"
+        android:textColor="@color/Clouds"
+        android:textSize="18sp"
+        android:typeface="normal" />
 
 
 </RelativeLayout>
