--- a/app/src/main/res/layout/fragment_fasting_length.xml
+++ b/app/src/main/res/layout/fragment_fasting_length.xml
@@ -12,28 +12,15 @@
     android:id="@+id/main"
     style="?pageBackground">
 
-    <Button
-        android:layout_width="85sp"
-        android:layout_height="48dp"
-        android:text="@string/start_toggle"
-        android:id="@+id/start_toggle"
-        android:layout_alignParentBottom="true"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:background="@drawable/greenbutton"
-        style="?textButton"
-        android:textColor="@color/Clouds"
-        android:textSize="18dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:weightSum="3"
-        android:id="@+id/linear1">
+        android:id="@+id/mainLinear"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/start_toggle">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -41,18 +28,18 @@
             android:layout_height="wrap_content"
             android:weightSum="4"
             android:id="@+id/linearLayout2"
-            android:layout_marginTop="15dp"
-            android:baselineAligned="false">
+            android:baselineAligned="false"
+            android:layout_gravity="center">
 
             <LinearLayout
                 android:orientation="vertical"
-                android:layout_width="0dp"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:layout_marginRight="4dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
 
                     android:text="@string/end_time"
@@ -61,30 +48,30 @@
                     android:textSize="14sp"
                     android:layout_above="@+id/current_time"
                     android:layout_toLeftOf="@+id/current_time"
-                    android:layout_weight="1"
                     android:layout_gravity="right"
-                    style= "?textTitle" />
+                    style= "?textTitle"
+                    android:layout_marginBottom="1dp"
+                    android:gravity="right" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
                     android:text="Thursday"
                     android:id="@+id/TXT_FUTURE"
                     android:singleLine="false"
-                    android:layout_gravity="right" />
+                    android:layout_gravity="right"
+                    android:gravity="right"
+                    android:textSize="14sp" />
 
                 <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_gravity="right">
+                    android:layout_gravity="right"
+                    android:gravity="right">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
                         android:text="22:"
                         android:id="@+id/dynamicHour"
                         android:textSize="14sp"
@@ -95,7 +82,6 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
                         android:text="00"
                         android:id="@+id/endclock_text"
                         android:textSize="14sp"
@@ -107,16 +93,15 @@
 
             <LinearLayout
                 android:orientation="vertical"
-                android:layout_width="0dp"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:id="@+id/linearLayout3"
                 android:layout_marginLeft="4dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="@string/current_time"
                     android:id="@+id/current_time"
                     android:textStyle="bold"
@@ -124,20 +109,19 @@
                     android:layout_alignTop="@+id/circularSeekBar1"
                     android:layout_alignRight="@+id/circularSeekBar1"
                     android:layout_alignEnd="@+id/circularSeekBar1"
-                    android:layout_marginRight="42dp"
-                    style="?textTitle" />
+                    style="?textTitle"
+                    android:layout_marginBottom="1dp" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
                     android:text="Wednesday"
-                    android:id="@+id/TXT_TODAY" />
+                    android:id="@+id/TXT_TODAY"
+                    android:editable="false" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="21:00"
                     android:id="@+id/clock_text"
                     android:textSize="14sp"
@@ -149,57 +133,36 @@
         </LinearLayout>
 
         <RelativeLayout
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingBottom="5dp"
 
             android:divider="@android:color/transparent"
             android:dividerHeight="@dimen/activity_horizontal_margin"
 
-            android:layout_marginBottom="12dp"
-            android:id="@+id/relative">
-
-            <com.devadvance.circularseekbar.CircularSeekBar
-                android:id="@+id/circularSeekBar1"
-                android:layout_width="wrap_content"
-                android:layout_height="280dp"
-                style="?circleSeek"
-                app:max="23"
-                app:pointer_radius="6"
-                app:pointer_halo_width="4"
-                android:paddingRight="5dp"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+            android:id="@+id/relative"
+            android:layout_gravity="center">
 
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/linearLayout"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="96dp">
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="01:00"
                     android:id="@+id/seekVal"
                     android:textSize="70sp"
-                    android:layout_alignParentLeft="false"
-                    android:layout_alignParentStart="false"
-                    android:layout_centerInParent="true"
                     android:gravity="center"
                     style="?textTimer"
-                    android:layout_alignParentRight="false"
-                    android:layout_alignParentEnd="false" />
+                    android:layout_gravity="center_vertical" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="61dp"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text=":00"
                     android:id="@+id/txt_seconds"
                     style="?textTimer"
@@ -207,8 +170,38 @@
                     android:gravity="center_vertical" />
             </LinearLayout>
 
+            <com.devadvance.circularseekbar.CircularSeekBar
+                android:id="@+id/circularSeekBar1"
+                android:layout_width="fill_parent"
+                android:layout_height="280dp"
+                style="?circleSeek"
+                app:max="23"
+                app:pointer_radius="6"
+                app:pointer_halo_width="4"
+                android:layout_alignParentTop="false"
+                android:layout_alignParentLeft="false"
+                android:layout_alignParentStart="false"
+                android:layout_alignParentBottom="false"
+                android:layout_centerInParent="true" />
+
         </RelativeLayout>
     </LinearLayout>
+
+    <Button
+        android:layout_width="85sp"
+        android:layout_height="48dp"
+        android:text="@string/start_toggle"
+        android:id="@+id/start_toggle"
+        android:layout_alignParentBottom="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/greenbutton"
+        style="?textButton"
+        android:textColor="@color/Clouds"
+        android:textSize="18dp"
+        android:layout_alignRight="@+id/mainLinear"
+        android:layout_alignEnd="@+id/mainLinear"
+        android:layout_alignLeft="@+id/mainLinear"
+        android:layout_alignStart="@+id/mainLinear" />
 
 
 </RelativeLayout>
