--- a/app/src/main/res/layout/fragment_fasting_started.xml
+++ b/app/src/main/res/layout/fragment_fasting_started.xml
@@ -15,7 +15,11 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/linearLayout5"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/breakFast_button">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -23,42 +27,38 @@
             android:layout_height="wrap_content"
             android:weightSum="2"
             android:id="@+id/linearLayout2"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
             android:baselineAligned="false"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="-8dp">
+            android:layout_gravity="center">
 
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/linearLayout"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
                 android:layout_weight="1"
                 android:layout_marginRight="4dp"
+                android:orientation="vertical"
                 android:gravity="right">
 
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="End"
+                    android:text="END"
                     android:id="@+id/end"
                     android:textSize="14sp"
                     android:textStyle="bold"
                     android:gravity="right"
-                    android:layout_weight="1"
-                    android:textAppearance="?textTitle" />
+                    android:textAppearance="?textTitle"
+                    android:layout_marginBottom="1dp" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAppearance="?textTitle"
                     android:text="Friday"
-                    android:id="@+id/txt_end_day" />
+                    android:id="@+id/txt_end_day"
+                    android:gravity="right"
+                    android:textSize="14sp" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -66,10 +66,8 @@
                     android:textAppearance="?textRegular"
                     android:text="21:00"
                     android:id="@+id/end_time"
-                    android:paddingTop="1dp"
                     android:textSize="14sp"
-                    android:gravity="right"
-                    android:layout_weight="1" />
+                    android:gravity="right" />
 
             </LinearLayout>
 
@@ -79,27 +77,29 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/linearLayout4"
                 android:layout_weight="1"
-                android:layout_marginLeft="4dp">
+                android:layout_marginLeft="4dp"
+                android:gravity="left">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAppearance="?textTitle"
-                    android:text="Start"
+                    android:text="START"
                     android:id="@+id/start"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
                     android:textSize="14sp"
                     android:textStyle="bold"
                     android:gravity="left"
-                    android:layout_weight="1" />
+                    android:layout_marginBottom="1dp" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAppearance="?textTitle"
                     android:text="Thursday"
-                    android:id="@+id/txt_start_day" />
+                    android:id="@+id/txt_start_day"
+                    android:textSize="14sp" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -109,10 +109,8 @@
                     android:id="@+id/start_time"
                     android:layout_centerVertical="true"
                     android:layout_centerHorizontal="true"
-                    android:paddingTop="1dp"
                     android:layout_gravity="left"
                     android:gravity="left"
-                    android:layout_weight="1"
                     android:textSize="14sp" />
 
             </LinearLayout>
@@ -121,20 +119,21 @@
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingBottom="5dp"
             android:id="@+id/clock_relative"
 
             android:divider="@android:color/transparent"
             android:dividerHeight="@dimen/activity_horizontal_margin"
 
-            android:layout_marginBottom="12dp">
+            android:layout_gravity="center">
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:id="@+id/linearLayout9"
                 android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true">
+                android:layout_centerHorizontal="true"
+                android:paddingTop="20dp">
 
                 <TextView
                     android:layout_width="fill_parent"
@@ -142,13 +141,12 @@
                     android:text="24 Hours"
                     android:id="@+id/txt_FastingDuration"
                     android:textSize="14sp"
-                    android:textAppearance="?textRegular"
-                    android:gravity="center"
-                    android:layout_marginTop="70dp"
+                    android:textAppearance="?textColoured"
                     android:layout_alignTop="@+id/holoCircularProgressBar1"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_marginBottom="8dp" />
+                    android:layout_marginBottom="8dp"
+                    android:gravity="center" />
 
                 <LinearLayout
                     android:orientation="horizontal"
@@ -187,7 +185,6 @@
                     android:layout_alignWithParentIfMissing="false"
 
                     android:id="@+id/completed_linear"
-                    android:layout_marginBottom="57dp"
                     android:layout_alignBottom="@+id/holoCircularProgressBar1"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
@@ -204,18 +201,18 @@
                         android:layout_alignParentEnd="true"
                         android:textSize="14sp"
                         android:typeface="normal"
-                        android:textAppearance="?textRegular" />
+                        android:textAppearance="?textColoured" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1%"
                         android:id="@+id/txt_completed"
-                        android:layout_below="@+id/textView2"
+                        android:layout_below="@+id/reminder_time_start"
                         android:layout_alignParentRight="true"
                         android:layout_alignParentEnd="true"
                         android:paddingTop="1dp"
-                        android:textAppearance="?textRegular" />
+                        android:textAppearance="?textColoured" />
 
                 </LinearLayout>
             </LinearLayout>
@@ -226,30 +223,32 @@
                 android:layout_height="272dp"
                 style="?circleProgress"
                 android:layout_centerVertical="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                android:layout_alignParentLeft="false"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="8dp"
+                android:layout_alignParentTop="true" />
 
         </RelativeLayout>
 
     </LinearLayout>
 
     <Button
-        android:layout_width="85sp"
+        android:layout_width="match_parent"
         android:layout_height="48dp"
         android:text="@string/btnStop"
         android:id="@+id/breakFast_button"
         style="?textButton"
         android:singleLine="false"
         android:layout_alignWithParentIfMissing="false"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:background="@drawable/redbutton"
         android:textColor="@color/Clouds"
         android:textSize="18sp"
-        android:typeface="normal" />
+        android:typeface="normal"
+        android:layout_alignParentBottom="true"
+        android:layout_alignLeft="@+id/linearLayout5"
+        android:layout_alignStart="@+id/linearLayout5"
+        android:layout_alignRight="@+id/linearLayout5"
+        android:layout_alignEnd="@+id/linearLayout5" />
 
 
 </RelativeLayout>
