--- a/app/src/main/res/layout/fragment_reminder_settings.xml
+++ b/app/src/main/res/layout/fragment_reminder_settings.xml
@@ -2,96 +2,26 @@
     android:layout_width="wrap_content"
     android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:id="@+id/main_relative"
     >
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/card"
+        android:background="@drawable/card_background"
         android:id="@+id/relative_layout"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true">
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="1dp"
-            android:layout_marginRight="1dp"
-            android:id="@+id/linearLayout"
-            android:weightSum="2">
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/reminder_linear"
-                android:gravity="center"
-                android:baselineAligned="false"
-                android:measureWithLargestChild="false"
-                android:layout_weight="1"
-                android:weightSum="2"
-                android:background="@color/Peter_River"
-                android:minHeight="48dp"
-                android:paddingTop="4dp"
-                android:paddingBottom="4dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Enable Reminders"
-                    android:id="@+id/textView"
-                    android:textColor="@color/Clouds"
-                    android:textSize="22sp"
-                    android:autoText="false"
-                    android:gravity="left"
-                    android:layout_marginLeft="8dp"
-                    android:layout_weight="1" />
-
-                <Switch
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/master_reminder_toggle"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
-                    android:checked="true"
-                    android:layout_marginRight="8dp"
-                    android:layout_weight="1" />
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/reminder_toggle_body"
-                android:id="@+id/card1_text"
-                android:textSize="18sp"
-                android:layout_below="@+id/linearLayout"
-                android:layout_alignParentRight="false"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="false"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="4dp"
-                android:gravity="left"
-                android:minHeight="72dp" />
-
-        </LinearLayout>
-
     </RelativeLayout>
 
     <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/listView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/listview_days"
         android:layout_below="@+id/relative_layout"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="12dp"/>
 </RelativeLayout>
