--- a/app/src/main/res/layout/listview_reminder_day.xml
+++ b/app/src/main/res/layout/listview_reminder_day.xml
@@ -15,55 +15,66 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp">
+        android:layout_marginRight="12dp"
+
+        android:focusableInTouchMode="false"
+        android:minHeight="48dp">
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentLeft="false"
             android:layout_alignParentStart="true"
             android:id="@+id/linearLayout"
-            android:weightSum="2" >
+            android:weightSum="2">
 
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="fill_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:id="@+id/reminder_linear"
-                android:gravity="center"
                 android:baselineAligned="false"
                 android:measureWithLargestChild="false"
-                android:layout_weight="1"
                 android:weightSum="2"
-                android:minHeight="48dp"
-                android:paddingTop="4dp"
-                android:paddingBottom="4dp">
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginLeft="8dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:text="Monday"
                     android:id="@+id/item_text_reminderday"
-                    android:textSize="22sp"
+                    style="?textRegular"
+                    android:textSize="20dp"
                     android:autoText="false"
-                    android:gravity="left"
-                    android:layout_marginLeft="8dp"
+                    android:gravity="center_vertical|left"
                     android:layout_weight="1"
+                    android:singleLine="false"
+                    android:focusableInTouchMode="false"
                     android:textColor="@color/Peter_River" />
 
                 <Switch
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/switch_reminder_toggle"
-                    android:checked="true"
-                    android:layout_marginRight="8dp"
-                    android:layout_weight="1" />
+                    android:checked="false"
+                    android:layout_weight="1"
+                    android:focusableInTouchMode="false"
+                    android:focusable="false"
+                    android:gravity="center_vertical" />
 
 
             </LinearLayout>
-
+            <View
+                style="?dividerStyle"
+                android:layout_marginTop="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="1dp"
+                android:layout_marginBottom="24dp"
+                android:layout_marginRight="4dp"
+                android:layout_marginLeft="4dp" />
 
 
         </LinearLayout>
@@ -73,29 +84,31 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/linearLayout3"
-            android:layout_below="@+id/linearLayout"
+            android:layout_alignTop="@+id/linearLayout4"
             android:layout_alignParentLeft="true"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_alignParentStart="true"
             android:layout_marginLeft="8dp"
             android:layout_marginBottom="8dp">
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?textRegular"
                 android:text="16"
                 android:id="@+id/item_text_fasting_hours"
-                android:textSize="18dp"
-                android:gravity="center_horizontal" />
+                android:textSize="14dp"
+                android:gravity="center_horizontal"
+                android:focusableInTouchMode="false" />
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?textRegular"
                 android:text="Hours"
                 android:id="@+id/text_hours"
-                android:textSize="14dp" />
+                android:textSize="14dp"
+                android:focusableInTouchMode="false"
+                android:textColor="@android:color/darker_gray" />
         </LinearLayout>
 
         <LinearLayout
@@ -103,12 +116,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/linearLayout4"
-            android:layout_alignTop="@+id/linearLayout3"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_toRightOf="@+id/linearLayout3"
             android:gravity="right"
-            android:layout_marginBottom="8dp"
+            android:layout_below="@+id/linearLayout"
+            android:layout_toRightOf="@+id/linearLayout3"
+            android:layout_alignRight="@+id/linearLayout"
+            android:layout_alignEnd="@+id/linearLayout"
             android:layout_marginRight="8dp">
 
             <LinearLayout
@@ -121,22 +133,28 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="From "
+                    style="?textRegular"
                     android:id="@+id/textView5"
-                    android:textColor="@android:color/darker_gray"
-                    android:textSize="18sp"
+                    android:textSize="14sp"
                     android:singleLine="true"
-                    android:autoText="false" />
+                    android:autoText="false"
+                    android:focusableInTouchMode="false"
+                    android:textIsSelectable="false"
+                    android:textColor="@android:color/darker_gray"
+                    android:gravity="right" />
 
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="20:00 Monday"
+                    android:text="20:00"
                     android:id="@+id/item_text_start_datetime"
-                    android:textSize="18dp"
+                    android:textSize="14sp"
                     android:singleLine="true"
                     android:editable="false"
                     android:textAppearance="?textRegular"
-                    android:autoText="false" />
+                    android:autoText="false"
+                    android:focusableInTouchMode="false"
+                    android:gravity="right" />
 
             </LinearLayout>
 
@@ -151,20 +169,24 @@
                     android:layout_height="wrap_content"
                     android:text="Until "
                     android:id="@+id/textView7"
-                    android:textColor="@android:color/darker_gray"
-                    android:textSize="18dp"
+                    android:textSize="14sp"
                     android:singleLine="true"
-                    android:autoText="false" />
+                    android:autoText="false"
+                    android:focusableInTouchMode="false"
+                    android:textColor="@android:color/darker_gray"
+                    android:gravity="right" />
 
                 <TextView
-                    android:layout_width="fill_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?textRegular"
-                    android:text="13:00 Tuesday"
+                    android:text="13:00"
                     android:id="@+id/item_text_end_datetime"
-                    android:textSize="18dp"
+                    android:textSize="14sp"
                     android:singleLine="true"
-                    android:autoText="false" />
+                    android:autoText="false"
+                    android:focusableInTouchMode="false"
+                    android:gravity="right" />
             </LinearLayout>
 
         </LinearLayout>
